# password-generator

./: db.sqlite3  pyproject.toml
app_form_html/: models.py  views.py
app_form_html/static/css/: styles.css
app_form_html/static/images/: roboto.jfif
app_form_html/static/js/: script.js  script1.js
app_form_html/templates/: como-usar.html  gerador.html  index.html  register.html
form_html/: settings.py  urls.py
