[tool.poetry]
name = "form-html"
version = "0.1.0"
description = ""
authors = ["Miguerfi <miguelpintojose00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
